# eval-protocol-python-sdk

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  pytest.ini  requirements-dev.txt
.github/workflows/: benchmark.yml  ci.yml  e2e-smoke-test.yml  elasticsearch-tests.yml  fireworks-tracing-tests.yml  remote-rollout-processor-propagate-status-test.yml  rollout.yml
development/: CONTRIBUTING.md  CORE_STRATEGY.md  gsm8k_sample.jsonl  record_replay_testing_handoff.md
development/notes/: pytest_integration_proposal.md
docs/cli_reference/: cli_overview.mdx
eval_protocol/: __init__.py  _version.py  auth.py  cli.py  common_utils.py  directory_utils.py  evaluation.py  exceptions.py  fireworks_rft.py  get_pep440_version.py  mcp_env.py  models.py  platform_api.py  playback_policy.py  reward_function.py  typed_interface.py
eval_protocol/adapters/: __init__.py  base.py  bigquery.py  braintrust.py  dataframe.py  fireworks_tracing.py  huggingface.py  langchain.py  langfuse.py  langsmith.py  lp_deserializer.py  openai_responses.py  r3_deserializer.py  utils.py  weave.py
eval_protocol/agent/: orchestrator.py  task_manager.py
eval_protocol/benchmarks/: test_aime25.py  test_frozen_lake.py  test_glm_streaming_compliance.py  test_gpqa.py  test_livebench_data_analysis.py  test_tau_bench_airline.py  test_tau_bench_retail.py
eval_protocol/cli_commands/: agent_eval_cmd.py  create_rft.py  deploy.py  export_docs.py  local_test.py  logs.py  run_eval_cmd.py  upload.py  utils.py
eval_protocol/data_loader/: __init__.py  dynamic_data_loader.py  factory_data_loader.py  inline_data_loader.py  jsonl_data_loader.py  models.py
eval_protocol/dataset_logger/: __init__.py  local_fs_dataset_logger_adapter.py  sqlite_dataset_logger_adapter.py  sqlite_evaluation_row_store.py
eval_protocol/datasets/: loader.py
eval_protocol/event_bus/: __init__.py  sqlite_event_bus.py  sqlite_event_bus_database.py
eval_protocol/execution/: pipeline.py
eval_protocol/generation/: clients.py
eval_protocol/human_id/: __init__.py
eval_protocol/integrations/: __init__.py  braintrust.py  deepeval.py  fireworks_v1_completions_client.py  openai_rft.py  tinker_cookbook.py  tinker_rollout_processor.py
eval_protocol/log_utils/: elasticsearch_client.py  elasticsearch_direct_http_handler.py  elasticsearch_index_manager.py  fireworks_tracing_http_handler.py  init.py  rollout_context.py  rollout_id_filter.py  util.py
eval_protocol/logging/: elasticsearch_client.py  elasticsearch_direct_http_handler.py  elasticsearch_index_manager.py
eval_protocol/mcp/: clients.py  mcp_multi_client.py  mcpgym.py  simple_process_manager.py  simulation_server.py
eval_protocol/mcp_agent/: main.py
eval_protocol/proxy/: .env.example  Dockerfile.gateway  README.md  __init__.py  config_no_cache.yaml  docker-compose.yml  requirements.txt
eval_protocol/pytest/: __init__.py  buffer.py  default_agent_rollout_processor.py  default_klavis_sandbox_rollout_processor.py  default_langchain_rollout_processor.py  default_mcp_gym_rollout_processor.py  default_pydantic_ai_rollout_processor.py  default_single_turn_rollout_process.py  elasticsearch_setup.py  evaluation_test.py  evaluation_test_postprocess.py  evaluation_test_utils.py  exception_config.py  execution.py  generate_parameter_combinations.py  github_action_rollout_processor.py  handle_persist_flow.py  openenv_rollout_processor.py  parameterize.py  plugin.py  priority_scheduler.py  remote_rollout_processor.py  rollout_processor.py  rollout_result_post_processor.py  store_results_url.py  tracing_utils.py  types.py  utils.py  validate_signature.py
eval_protocol/quickstart/: __init__.py  llm_judge.py  llm_judge_braintrust.py  llm_judge_langfuse.py  llm_judge_langsmith.py  llm_judge_openai_responses.py  utils.py
eval_protocol/rewards/: accuracy.py  apps_coding_reward.py  apps_testing_util.py  bfcl_reward.py  code_execution.py  cpp_code.py  deepcoder_reward.py  function_calling.py  json_schema.py  language_consistency.py  lean_prover.py  length.py  list_comparison_math_reward.py  math.py  multiple_choice_math_reward.py  reasoning_steps.py  repetition.py  tag_count.py
eval_protocol/tracing/: README.md  __init__.py  logprobs.py  registry.py  (+3 more)
examples/: README.md
scripts/: run_sharded_tests.sh  test_remote_rollout_prompt_token_ids.py  validate_dev_tracing.py  validate_remote.py  verify_logging_locally.py
tests/: test_adapters_e2e.py  test_auth.py  test_batch_evaluation.py  test_cli.py  test_cli_args.py  test_cli_create_rft.py  test_cli_create_rft_infer.py  test_cli_local_test.py  test_cli_startup_benchmark.py  test_deploy_integration.py  test_directory_utils.py  test_ep_upload_e2e.py  test_eval_protocol_import.py  test_evaluation.py  test_evaluation_integration.py  test_evaluation_postprocess.py  test_evaluation_preview_integration.py  test_event_bus.py  test_event_bus_helper.py  test_examples_end_to_end.py  test_exception_config.py  test_exceptions.py  test_fireworks_api.py  test_fireworks_v1_completions_client.py  test_human_id.py  test_litellm_policy_provider_fields.py  test_logs_server.py  test_message_field_filtering.py  test_minimal.py  test_models.py  test_no_implicit_dotenv.py  test_openai_rft_integration.py  test_priority_scheduler.py  test_quickstart_utils.py  test_retry_mechanism.py  test_reward_protocol_import.py  test_rollout_control_plane_integration.py  test_rollout_logprobs.py  test_show_results_url.py  test_sqlite_hardening.py  (+2 more)
typescript/: .gitignore  README.md  index.ts  package.json  pnpm-lock.yaml  tsconfig.json
vite-app/: bun.lockb
(+239 files in other folders)
